--- a/LoginANDReg/Base.lproj/Main.storyboard
+++ b/LoginANDReg/Base.lproj/Main.storyboard
@@ -1,24 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="G8z-9p-PTs">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Profile View Controller-->
+        <scene sceneID="ATa-ck-oJz">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="G8z-9p-PTs" customClass="ProfileViewController" customModule="LoginANDReg" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bv3-AN-bdF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserProfilr" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RDu-BV-GQh">
+                                <rect key="frame" x="147" y="323" width="82" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SXx-H8-ySK">
+                                <rect key="frame" x="297" y="33" width="62" height="30"/>
+                                <state key="normal" title="LOGOUT"/>
+                                <connections>
+                                    <action selector="LogOutAction:" destination="G8z-9p-PTs" eventType="touchUpInside" id="HjT-hH-Zjd"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="RDu-BV-GQh" firstAttribute="centerX" secondItem="bv3-AN-bdF" secondAttribute="centerX" id="UFD-DL-JK6"/>
+                            <constraint firstItem="RDu-BV-GQh" firstAttribute="centerY" secondItem="bv3-AN-bdF" secondAttribute="centerY" id="eD7-x3-cfc"/>
+                            <constraint firstItem="SXx-H8-ySK" firstAttribute="trailing" secondItem="bv3-AN-bdF" secondAttribute="trailingMargin" id="mOw-bZ-nlZ"/>
+                            <constraint firstItem="SXx-H8-ySK" firstAttribute="top" secondItem="0Xa-Vz-6Md" secondAttribute="top" constant="13" id="pCh-ha-ed1"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0Xa-Vz-6Md"/>
                     </view>
+                    <connections>
+                        <outlet property="profileName" destination="RDu-BV-GQh" id="PHh-Rl-WoL"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rif-m5-3UF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1809" y="-54"/>
+        </scene>
+        <!--Login New View Controller-->
+        <scene sceneID="aGm-Jr-E7i">
+            <objects>
+                <viewController storyboardIdentifier="page1" id="vyQ-U3-v3T" customClass="LoginNewViewController" customModule="LoginANDReg" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="V5d-Kb-xmj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qfz-Oh-XeE">
+                                <rect key="frame" x="16" y="147" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MrJ-rC-K4Y">
+                                <rect key="frame" x="16" y="209" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OgA-f7-Pwv">
+                                <rect key="frame" x="159" y="316" width="58" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" red="0.0" green="1" blue="0.030457442939999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="LoginAction:" destination="vyQ-U3-v3T" eventType="touchUpInside" id="QSN-Zi-9kU"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.52156862749999999" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="OgA-f7-Pwv" firstAttribute="centerX" secondItem="MrJ-rC-K4Y" secondAttribute="centerX" id="8CL-Ot-Qbe"/>
+                            <constraint firstItem="Ryc-eg-8g4" firstAttribute="trailing" secondItem="MrJ-rC-K4Y" secondAttribute="trailing" constant="16" id="AuA-8K-QNo"/>
+                            <constraint firstItem="Ryc-eg-8g4" firstAttribute="trailing" secondItem="qfz-Oh-XeE" secondAttribute="trailing" constant="16" id="Iwm-4J-LS6"/>
+                            <constraint firstItem="MrJ-rC-K4Y" firstAttribute="top" secondItem="qfz-Oh-XeE" secondAttribute="bottom" constant="32" id="W21-62-iEO"/>
+                            <constraint firstItem="OgA-f7-Pwv" firstAttribute="top" secondItem="MrJ-rC-K4Y" secondAttribute="bottom" constant="77" id="dQl-pi-90V"/>
+                            <constraint firstItem="qfz-Oh-XeE" firstAttribute="leading" secondItem="Ryc-eg-8g4" secondAttribute="leading" constant="16" id="nDz-Rw-I50"/>
+                            <constraint firstItem="MrJ-rC-K4Y" firstAttribute="leading" secondItem="Ryc-eg-8g4" secondAttribute="leading" constant="16" id="w03-2n-haT"/>
+                            <constraint firstItem="qfz-Oh-XeE" firstAttribute="top" secondItem="Ryc-eg-8g4" secondAttribute="top" constant="127" id="zzd-3k-GKl"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ryc-eg-8g4"/>
+                    </view>
+                    <connections>
+                        <outlet property="passwordTextField" destination="MrJ-rC-K4Y" id="LKi-6O-Ohg"/>
+                        <outlet property="usernameTextField" destination="qfz-Oh-XeE" id="Pb2-J2-vxQ"/>
+                        <segue destination="ODa-hR-dpd" kind="unwind" identifier="unwindToProfilePage" unwindAction="unwindToProfilePageWithSegue:" id="6R8-kb-gEY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c5W-nY-c6E" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ODa-hR-dpd" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2600.8000000000002" y="-54.422788605697157"/>
         </scene>
     </scenes>
 </document>
